ui: Fix minor issues, and resave all files with f21 glade

--- a/ui/asyncjob.ui
+++ b/ui/asyncjob.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.0 on Sat Jan 18 13:22:46 2014 -->
+<!-- Generated with glade 3.18.3 -->
 <interface>
-  <!-- interface-requires gtk+ 3.0 -->
+  <requires lib="gtk+" version="3.0"/>
   <object class="GtkWindow" id="vmm-progress">
     <property name="can_focus">False</property>
     <property name="border_width">12</property>
