--- a/ui/about.ui
+++ b/ui/about.ui
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.18.3 -->
 <interface>
-  <!-- interface-requires gtk+ 3.0 -->
+  <requires lib="gtk+" version="3.0"/>
   <object class="GtkAboutDialog" id="vmm-about">
     <property name="can_focus">False</property>
     <property name="destroy_with_parent">True</property>
